[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tab-saver-api"
version = "1.0.0"
description = "Production Tab Manager API using AWS Lambda + DynamoDB"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gonzalo Vazquez", email = "gonzalo@example.com" }
]

dependencies = [
    "flask>=3.0.0",
    "boto3>=1.34.0",
    "pytest-cov>=7.0.0",
    "moto>=5.1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=5.0.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/gonzalovazquez/tab-saver-api"
Repository = "https://github.com/gonzalovazquez/tab-saver-api"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
]

ignore = [
    "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
